<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/recyclerView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:id="@+id/userEmailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_email"
        android:textSize="20sp"
        android:layout_margin="5dp"
        android:textColor="#000" />
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:contentDescription="@string/images_from_database" />

    <TextView
        android:id="@+id/userCommentText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/user_comment"
        android:textSize="18sp"
        android:textColor="#000"
        android:layout_margin="5dp"/>
</LinearLayout>